# dspy-projects

./: .gitignore  README.md  pyproject.toml
src/dspy_projects/: __init__.py  dspy_RAG.ipynb  multi_hop_qa.ipynb
src/dspy_projects/weaviate_dspy_examples/: dspy_rag.ipynb
