[project]
name = "dspy-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "dspy>=0.1.5",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
